welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:2: error: not found: value vuBiscuit
	var vuBiscuit()=false
            ^Program:3: error: not found: value estsurBiscuit
		if (estsurBiscuit()) {
                    ^Program:4: error: not found: value vuBiscuit
			vuBiscuit=true
                        ^Program:8: error: not found: value vuBiscuit
		if (estSurBiscuit()) {vuBiscuit=true}
                                      ^Program:6: error: type mismatch;
 found   : Unit
 required: Boolean
			for (i <- 1 to 6) {
                               ^